# page-loader

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_loader/: __init__.py  cli.py  page_loader.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: test_page_loader.py
tests/fixtures/: realpython-com.html  ru-hexlet-io-courses.html
tests/fixtures/expected/: page-loader-hexlet-repl-co.html
